--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+AZURE_STORAGE_NAME=your_storage_account_name
+AZURE_STORAGE_KEY=your_storage_account_key
+AZURE_STORAGE_CONTAINER=your_container_name
+AZURE_STORAGE_URL=https://your_storage_account_name.blob.core.windows.net/
+AZURE_STORAGE_CONNECTION_STRING=
