--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "azure-oss/storage-blob-flysystem": "^1.2",
+        "azure-oss/storage-blob-laravel": "^1.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
